syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/simplebank/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Simple Bank API";
    version: "1.0";
    contact: {
      name: "liuxucheng";
      url: "https://github.com/cyberpunk-admin/simple_bank";
      email: "liuxc784637889@gmail.com";
    };
  };
};

service SimpleBank {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
      option (google.api.http) = {
          post: "/v1/create_user"
          body: "*"
      };
  }
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
      option (google.api.http) = {
        post: "/v1/login_user"
        body: "*"
      };
  }
}