syntax = "proto3";

package pb;

option go_package = "github.com/simplebank/pb";

import "google/protobuf/timestamp.proto";

message User{
  string user_name = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}